--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(4, 1, 5);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+p {
+  padding-left: 10px;
+  list-style: none;
+  text-decoration: none;
+  font-size: 18px;
+  color: antiquewhite;
+}
+
+h1,
+h2,
+h3 {
+  color: antiquewhite;
 }
